<resources>
    <string name="app_name">ApiTestQuiz</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="press_next_to_start">Press next to start</string>
    <string name="next">Finish</string>
    <string name="quiz_done_n_here_are_your_results">Quiz Done\n Here are your results :</string>
    <string name="textview">TextView</string>
    <string name="restart_nquiz">Restart \nQuiz</string>
    <string name="please_select_a_topic_n_from_the_list_below">Please Select A Topic \n From The List Below</string>
    <string name="nextSel">Next</string>
    <string name="slideview">SlideView</string>
    <string name="next_page">Next Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentview">FragmentView</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="right2">Navigation</string>
    <string name="leftbutton2">Navigation</string>
    <string name="button">Button</string>
    <string name="buttonfrag">Button</string>
</resources>