<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="125dp"
        android:justificationMode="inter_word"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:text="@string/press_next_to_start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textQuestion2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:paddingVertical="5dp"
        android:paddingHorizontal="25dp">

        <RadioButton
            android:id="@+id/radioOne2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/radioTwo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radioThree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radioFour2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/four" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/right" />


    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/left" />
</RelativeLayout>