<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.MainActivity">

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingHorizontal="25dp">

        <RadioButton
            android:id="@+id/radioOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:onClick="checkButton"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/radioTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:onClick="checkButton"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radioThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:onClick="checkButton"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radioFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:onClick="checkButton"
            android:text="@string/four" />

    </RadioGroup>

    <TextView
        android:paddingHorizontal="25dp"
        android:id="@+id/textQuestion"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_above="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-283dp"
        android:text="@string/press_next_to_start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/next" />

</RelativeLayout>