<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.SelectionActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/please_select_a_topic_n_from_the_list_below"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/dropdownList"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/btn_dropdown"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonSel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextSel"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownList" />

    <Button
        android:id="@+id/buttonTester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/slideview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSel" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/buttonTester2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTester" />

</androidx.constraintlayout.widget.ConstraintLayout>